# rgb-lib

./: .gitignore  Cargo.toml
.github/: RELEASES.md
.github/workflows/: build.yml  format.yml  lint.yml  release.yml  sync-upstream.yml  test.yml
bindings/: README.md
bindings/c-ffi/: Cargo.toml
bindings/c-ffi/src/: lib.rs  utils.rs
bindings/uniffi/: Cargo.toml  uniffi.toml
bindings/uniffi/src/: lib.rs  rgb-lib.udl
bindings/wasm/: Cargo.toml
bindings/wasm/examples/: simple-test.html
bindings/wasm/src/: lib.rs
examples/: bdk_peer.rs  dfns_e2e.rs  vss_example.rs  vss_unencrypted_example.rs
migration/src/: lib.rs  m20260401_000001_create_mpc_address_table.rs
src/: error.rs  lib.rs  utils.rs
src/api/: proxy.rs  reject_list.rs
src/database/: enums.rs  memory_db.rs  mod.rs
src/database/entities/: mod.rs  mpc_address.rs  prelude.rs
src/mpc/: dfns.rs  mod.rs
src/wallet/: backup.rs  core.rs  indexer.rs  memory_store.rs  mod.rs  mpc.rs  mpc_psbt.rs  multisig.rs  objects.rs  offline.rs  online.rs  rust_only.rs  singlesig.rs  vss.rs
src/wallet/test/: address_reuse.rs  blind_receive.rs  get_wallet_data.rs  inflate.rs  mod.rs  multisig.rs  new.rs  rust_only.rs  send.rs  vss.rs
src/wallet/test/multisig/: utils.rs
src/wallet/test/utils/: helpers.rs  mod.rs  vss.rs
src/wallet/test/vss_e2e/: autobackup.rs  disruptive.rs  migration.rs  mod.rs  negative.rs  restore_chunked.rs  restore_encrypted.rs  restore_unencrypted.rs
tests/: compose.yaml  regtest.sh
tests/vss-server/: Dockerfile
