[package]
name = "rgb-lib"
version = "0.3.0-beta.4"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/RGB-Tools/rgb-lib"
homepage = "https://github.com/RGB-Tools/rgb-lib"
license = "MIT"
description = "RGB wallet library"
exclude = ["migration"]

[workspace]
members = [".", "migration", "bindings/wasm"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = [
    "std",
] }
bdk_wallet = { version = "=2.0.0", default-features = false, features = [
    "keys-bip39",
    "std",
] }
bdk_electrum = { version = "0.23.0", optional = true, default-features = false, features = [
    "use-rustls",
] }
bdk_esplora = { version = "0.22.0", optional = true, default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
    "stream",
] }
tokio = { version = "1", default-features = false, features = ["rt"] }
generic-array = "=0.14.7"  # temporary pin while waiting for chacha20poly1305 update
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.9.1", default-features = false }
reqwest = { version = "0.12", optional = true, default-features = false }
scrypt = { version = "0.11.0", default-features = false, features = [
    "simple",
    "std",
] }
sea-query = "0.32.6"
serde = { version = "^1.0", default-features = false, features = [
    "derive",
] }
serde_json = { version = "^1.0", default-features = false, features = [
    "preserve_order",
] }
slog = { version = "2.7.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
time = { version = "0.3.41", default-features = false, features = ["macros", "formatting"] }
typenum = { version = "1.18.0", default-features = false }

# VSS backup (optional)
vss-client = { package = "vss-client-ng", git = "https://github.com/lightningdevkit/vss-client", rev = "ad63805047561dcf3117cd992ad6d8bc3881adef", default-features = false, optional = true, features = [
    "sigs-auth",
] }
hkdf = { version = "0.12", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

# RGB-related deps
amplify = { version = "=4.8.1", default-features = false }
rgb-invoicing = { version = "=0.11.1-rc.7", default-features = false }
rgb-psbt-utils = { version = "=0.11.1-rc.7", default-features = false }
rgb-schemas = { version = "=0.11.1-rc.6", default-features = false }
rgb-ops = { version = "=0.11.1-rc.7", default-features = false, features = [
    "serde",
] }
rgb-strict-encoding = { version = "=1.0.0", default-features = false, features = [
    "bitcoin",
] }
rgb-strict-types = { version = "=1.0.0", default-features = false }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bdk_wallet = { version = "=2.0.0", default-features = false, features = [
    "file_store",
] }
bdk_esplora = { version = "0.22.0", optional = true, default-features = false, features = [
    "blocking-https-rustls",
] }
futures = { version = "0.3", default-features = false, features = [
    "executor",
] }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
] }
rgb-lib-migration = { path = "migration", version = "0.3.0-beta.2" }
rustls = { version = "0.23", default-features = false }
sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-json",
] }
slog-async = { version = "2.8.0", default-features = false }
slog-term = { version = "2.9.1", default-features = false }
tempfile = { version = "3.20.0", default-features = false }
file-format = { version = "0.27.0", default-features = false, features = [
    "reader",
] }
walkdir = { version = "2.5.0", default-features = false }
zip = { version = "4.0.0", default-features = false, features = [
    "zstd",
] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
bdk_core = { version = "0.6" }
bdk_esplora = { version = "0.22.0", optional = true, default-features = false, features = [
    "async-https",
] }
esplora-client = { version = "0.12", default-features = false, features = [
    "async-https",
] }
getrandom = { version = "0.2", features = ["js"] }
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
] }
time = { version = "0.3.41", default-features = false, features = ["wasm-bindgen"] }

[dev-dependencies]
copy_dir = { version = "0.1.3", default-features = false }
dircmp = { version = "0.2.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
regex = { version = "1.11.1", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["electrum"]
all = ["electrum", "esplora", "vss"]
electrum = [
    "bdk_electrum",
    "reqwest",
    "rgb-ops/electrum_blocking",
]
esplora = [
    "bdk_esplora",
    "reqwest",
    "rgb-ops/esplora_blocking",
]
vss = ["vss-client", "hkdf", "sha2"]
camel_case = []

[[example]]
name = "vss_example"
required-features = ["vss"]

[[example]]
name = "vss_unencrypted_example"
required-features = ["vss"]

[profile.reldebug]
inherits = "release"
debug = 1

[patch.crates-io]
rgb-strict-encoding = { git = "http://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-consensus = { git = "http://github.com/rgb-protocol/rgb-consensus", branch = "master" }
rgb-ops = { git = "http://github.com/rgb-protocol/rgb-ops", branch = "master" }
rgb-invoicing = { git = "http://github.com/rgb-protocol/rgb-ops", branch = "master" }
