[package]
name = "rgb-lib-uniffi"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.88.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "rgblibuniffi"

[[bin]]
name = "rgb-lib-uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
rgb-lib = { version = "0.3.0-beta.5", path = "../../", features = [
    "electrum",
    "esplora",
    "vss",
] }
uniffi = { version = "0.31.0", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
uniffi = { version = "0.31.0", default-features = false, features = [
    "build",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
aws-lc-rs = { version = "1.16.2", default-features = false, features = [
    "bindgen",
] }

[workspace]
