[package]
name = "rgb-lib-wasm"
version = "0.3.0-beta.4"
edition = "2024"
description = "RGB wallet library WASM bindings for browsers"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rgb_lib_wasm"

[dependencies]
rgb-lib = { path = "../../", default-features = false, features = ["esplora"] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
thiserror = { version = "2.0", default-features = false }
js-sys = "0.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
